--- a/src/index.scss
+++ b/src/index.scss
@@ -190,6 +190,7 @@ main { // children are .about, .login, .profile, .dashboard, etc.
 
 .landing, .login, .profile { // immediate parent is main
   text-align: center; 
+  max-height: 63vh;
 }
 
 /* @@@@@@@@@@@@@@@@ ICONS @@@@@@@@@@@@@@ */
@@ -553,24 +554,40 @@ button {
 }
 
 /* @@@@@@@@@@@@@@ FORMS  @@@@@@@@@@@@ */
-
+.profileForm {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  align-items: flex-start;
+}
 .profileInput {
   font-size: 18px;
-  padding: 8px;
+  padding: 6px;
   margin: 5px;
   display: flex;
   text-align: left;
   width: 250px;
 }
 .inputLabel {
-  margin-bottom: 20px;
+  margin-bottom: 15px;
   margin-top: 0;
   margin-left: 5px; // same as .profileInput
   margin-right: 5px; // same as .profileInput
+  font-size: 12px;
+  padding-left: 6px;
   display: flex;
   width: 250px;
   color: $fontColorLabel;
 } 
+
+.createAccountButton {
+  padding: 8px;
+  margin: 5px;
+  display: flex;
+  margin-top: 0;
+  margin-bottom: 0;
+  width: 250px;
+}
 
 .statusBarContainer { // immediate parent is .question
   width: 100%;
