--- a/src/index.css
+++ b/src/index.css
@@ -234,8 +234,7 @@ button {
   max-width: 200px; }
 
 .enterButton, .aboutButton, .loginButton, .createAccountButton {
-  min-width: 200px;
-  max-width: 250px; }
+  width: 250px; }
 
 .landingButtons, .loginButtons {
   display: flex;
@@ -281,7 +280,7 @@ button {
   align-items: center;
   justify-content: space-between;
   padding-bottom: 5px;
-  border-bottom: 1px solid #4a487f;
+  border-bottom: 1px solid #ccccc9;
   margin-bottom: 5px;
   width: 100%; }
 
@@ -310,7 +309,7 @@ button {
   justify-content: center;
   align-items: center;
   border-radius: 50%;
-  border: 1px solid #4a487f;
+  border: 1px solid #ccccc9;
   -moz-box-shadow: 5px 5px 5px -4px #999;
   -webkit-box-shadow: 5px 5px 5px -4px #999;
   box-shadow: 5px 5px 5px -4px #999;
@@ -406,8 +405,21 @@ button {
   height: 100%;
   display: flex;
   top: 0;
+  position: relative;
+  justify-content: flex-start;
+  align-items: center;
   -webkit-transition: width 2s, -webkit-transform 2s;
   transition: width 2s, transform 2s; }
+  .statusBar span {
+    display: flex;
+    color: #52524e;
+    font-size: 12px;
+    padding: 2px;
+    position: absolute;
+    top: 0;
+    left: 0;
+    max-width: 100%;
+    min-width: 10px; }
 
 .statusBarSkipped {
   background: #fef4d7;
@@ -473,7 +485,11 @@ button {
   margin: 5px;
   display: flex;
   text-align: left;
-  width: 250px; }
+  width: 250px;
+  border: 1px solid #ccccc9;
+  -moz-box-shadow: inset 3px 3px 3px -2px #9c9ac6;
+  -webkit-box-shadow: inset 3px 3px 3px -2px #9c9ac6;
+  box-shadow: inset 3px 3px 3px -2px #9c9ac6; }
 
 .inputLabel {
   margin-bottom: 15px;
@@ -491,8 +507,7 @@ button {
   margin: 5px;
   display: flex;
   margin-top: 0;
-  margin-bottom: 0;
-  width: 250px; }
+  margin-bottom: 0; }
 
 .statusBarContainer {
   width: 100%;
@@ -522,7 +537,7 @@ button {
   width: 100%;
   min-height: 30vh;
   background-color: #fafcff;
-  border: 1px solid #4a487f;
+  border: 1px solid #ccccc9;
   -moz-box-shadow: inset 5px 5px 5px -4px #9c9ac6;
   -webkit-box-shadow: inset 5px 5px 5px -4px #9c9ac6;
   box-shadow: inset 5px 5px 5px -4px #9c9ac6; }
