--- a/src/index.css
+++ b/src/index.css
@@ -68,7 +68,8 @@ body {
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
-  align-items: center; }
+  align-items: center;
+  position: relative; }
 
 main {
   display: flex;
@@ -555,6 +556,70 @@ button {
   display: flex;
   flex-direction: column;
   justify-content: space-between; }
+
+/* @@@@@@@@@@@@@@@@@@@@ MODAL @@@@@@@@@@@@@@@@@@ */
+.modalMask {
+  background-color: rgba(0, 0, 0, 0.2);
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  top: 0;
+  left: 0;
+  z-index: 99;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center; }
+
+.modal {
+  position: relative;
+  width: 85vw;
+  padding: 15vw;
+  background-color: rgba(254, 254, 254, 0.75);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  border: 2px solid #a94d88;
+  color: #a94d88;
+  border-radius: 4px;
+  z-index: 999; }
+  .modal .message {
+    font-size: 24px;
+    text-align: center; }
+  .modal .modalButton {
+    position: absolute;
+    top: 5px;
+    right: 5px; }
+
+/* @@@@@@@@@@@@@@ TOOLTIPS @@@@@@@@@@@@ */
+.tooltip {
+  position: relative; }
+  .tooltip .tooltipText {
+    display: none;
+    position: absolute;
+    font-size: 12px;
+    background-color: #ebf5ff;
+    color: #4a487f;
+    text-align: left;
+    padding: 15px;
+    border-radius: 15px 0 15px 15px;
+    border: 1px solid #52524e;
+    top: 110%;
+    right: 0;
+    z-index: 999;
+    width: 200px;
+    -moz-box-shadow: 7px 7px 7px -5px #999;
+    -webkit-box-shadow: 7px 7px 7px -5px #999;
+    box-shadow: 7px 7px 7px -5px #999; }
+    .tooltip .tooltipText td {
+      font-size: 12px;
+      padding: 2px; }
+    .tooltip .tooltipText h4 {
+      margin-bottom: 4px; }
+
+.tooltip:hover .tooltipText {
+  display: block; }
 
 /* @@@@@@@@@@@@@@ GENERAL OVERRIDES @@@@@@@@@@@@ */
 .center {
